# rs-iris

./: Cargo.toml  README.md  clustered_dataset_linf.npy  clustered_memberships_l1.npy  clustered_memberships_l2.npy  clustered_memberships_linf.npy  print_npy.py
iris_data/: Cargo.toml
iris_data/src/: lib.rs
src/: bayes.rs  kmeans.rs  logistic_reg.rs  main.rs  svm.rs
