[package]
name = "iris"
version = "0.1.0"
edition = "2024"

[dependencies]
linfa = "0.7"
linfa-datasets = { version = "0.7", features = ["iris"] }
ndarray = "0.15"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
iris_data = { path = "iris_data"}
linfa-logistic = "0.7"
linfa-bayes = "0.7"
linfa-clustering = "0.7"
linfa-nn = "0.7"
linfa-svm = "0.7"
rand = "0.8"
rand_xoshiro = "0.6"
ndarray-rand = "0.14"
ndarray-npy = { version = "0.8", default-features = false }